<resources>
    <string name="app_name">MBC Miner</string>
    <string-array name="algorithms">
        <item>rainforest</item>
        <item>sha256d</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="toolbar_settings">Settings</string>

    <!-- General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_general_summary">Wallet address and pool settings</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_user_wallet_address">Wallet Address</string>
    <string name="pref_default_user_wallet_address"></string>

    <string name="pref_title_select_pool">Mining Pool</string>
    <string-array name="pref_pool_list_names">
        <item>The Technicals</item>
        <item>Mining Patriot</item>
        <item>Moric Pool</item>
        <item>MicroPool</item>
        <item>Sky Pool</item>
        <item>BlockMiner.Me</item>
        <item>Hashpool.EU</item>
        <item>ThePool.Life</item>
        <item>Extreme Hash</item>
        <item>MineCrypto.Pro</item>
    </string-array>
    <string-array name="pref_pool_list_values">
        <item>technicals</item>
        <item>miningpatriot</item>
        <item>moricpool</item>
        <item>micropool</item>
        <item>skypool</item>
        <item>blockminerme</item>
        <item>hashpooleu</item>
        <item>thepoollife</item>
        <item>extremehash</item>
        <item>minecryptopro</item>
    </string-array>

    <!-- Settings for PoW Algorithm -->
    <string name="pref_title_pow_algorithm">Algorithm</string>
    <string-array name="pref_algorithm_list_names">
        <item>Rainforest</item>
        <item>sha256d</item>
    </string-array>
    <string-array name="pref_algorithm_list_values">
        <item>rainforest</item>
        <item>sha256d</item>
    </string-array>

    <!-- Settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Settings for About -->
    <string name="pref_header_about">About</string>
    <string name="pref_header_about_summary">Information about this app</string>

    <string name="pref_about_version_title">Software Version</string>
    <string name="pref_about_version_summary">v0.1.0 beta</string>
</resources>
