<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="org.microbitcoin.app.miner.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/pref_header_general"
        android:summary="@string/pref_header_general_summary" />

    <!--<header-->
        <!--android:fragment="org.microbitcoin.app.miner.SettingsActivity$NotificationPreferenceFragment"-->
        <!--android:icon="@drawable/ic_notifications_black_24dp"-->
        <!--android:title="@string/pref_header_notifications" />-->

    <!--<header-->
        <!--android:fragment="org.microbitcoin.app.miner.SettingsActivity$DataSyncPreferenceFragment"-->
        <!--android:icon="@drawable/ic_sync_black_24dp"-->
        <!--android:title="@string/pref_header_data_sync" />-->

    <header
        android:fragment="org.microbitcoin.app.miner.SettingsActivity$AboutPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_about"
        android:summary="@string/pref_header_about_summary" />


</preference-headers>
